<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.chatapp.ui.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/bc"
        tools:context=".ui.register.RegisterActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_margin="10dp"
            android:text="@={vm.name}"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:visibility="@{vm.nameError?View.VISIBLE:View.GONE}"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:text="@={vm.email}"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"
            />
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_margin="10dp"
            android:text="@={vm.userName}"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_user_name"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:visibility="@{vm.userNameError?View.VISIBLE:View.GONE}"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:text="@={vm.password}"
            android:inputType="textPassword"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_should_be_6_chars_at_least"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:visibility="@{vm.passwordError?View.VISIBLE:View.GONE}"
            />
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:onClick="@{()->vm.register()}"
            />
    </LinearLayout>
</layout>
