<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.chatapp.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/bc"
        tools:context=".ui.login.LoginActivity">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:text="@={vm.email}"
            />
        <TextView
            android:id="@+id/email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:text="@={vm.password}"
            />
        <TextView
            android:id="@+id/password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_should_be_6_chars_at_least"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:visibility="@{vm.passwordError?View.VISIBLE:View.GONE}"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="10dp"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="@{()->vm.login()}"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:onClick="@{()->vm.goToRegister()}"
                />
        </LinearLayout>

    </LinearLayout>
</layout>